--- a/LoginSystem/LoginSystem/Resources/layout/Main.axml
+++ b/LoginSystem/LoginSystem/Resources/layout/Main.axml
@@ -6,7 +6,7 @@
     android:background="@android:color/background_light"
     android:weightSum="100"
     android:minWidth="25px"
-    android:minWeight="25px">
+    android:minHeight="25px">
     <TextView
         android:text="Create An Account"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -24,6 +24,7 @@
         android:layout_height="0dp"
         android:layout_weight="15"
         android:id="@+id/btnSignIn"
+        android:background="@drawable/ButtonSignInStyle"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:textSize="15sp" />
@@ -44,10 +45,11 @@
         android:id="@+id/btnSignUp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        android:background="@drawable/ButtonSignUpStyle" />
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0"
+        android:layout_height="0dp"
         android:layout_weight="35"
         android:minWidth="25px"
         android:minHeight="25px">
@@ -55,7 +57,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/progressBar1"
+            android:background="@drawable/ProgressBarStyle"
             android:layout_centerInParent="true"
-            android:indeterminate="true"/>
+            android:indeterminate="true" />
     </RelativeLayout>
 </LinearLayout>
